--- a/postApply.html
+++ b/postApply.html
@@ -59,10 +59,28 @@
                 </mt-field>
                 <mt-field label="出生年月" class="important-input" placeholder="请输入出生年月" v-model="form.email"
                     @blur.native.capture="checkEmail"><span style="color:red">*</span></mt-field>
-                <mt-field label="民族" class="important-input select" placeholder="请输入民族" v-model="form.email">
+                <!-- <mt-field label="民族" class="important-input select" placeholder="请输入民族" v-model="form.email">
                     <p class="select-input" id="trigger4"></p>
-                    <span style=" color:red">*</span>
-                </mt-field>
+                </mt-field> -->
+                <a class="mint-cell mint-field important-input">
+                    <!---->
+                    <div class="mint-cell-left"></div>
+                    <div class="mint-cell-wrapper">
+                        <div class="mint-cell-title">
+                            <!----><span class="mint-cell-text">民族</span>
+                            <!---->
+                        </div>
+                        <div class="mint-cell-value">
+                            <input placeholder="请输入民族" type="text" class="mint-field-core">
+                            <div class="mint-field-clear" style="display: none;"><i
+                                    class="mintui mintui-field-error"></i></div><span
+                                class="mint-field-state is-default"><i class="mintui mintui-field-default"></i></span>
+                            <div class="mint-field-other"><span style="color: red;">*</span></div>
+                        </div>
+                        <!---->
+                    </div>
+                    <div class="mint-cell-right"></div>
+                </a>
                 <mt-field label="籍贯" class="important-input" placeholder="请输入籍贯" v-model="form.email"
                     @blur.native.capture="checkEmail"><span style="color:red">*</span></mt-field>
                 <mt-field label="婚否" class="important-input" placeholder="--请选择--" v-model="marriage" readonly
